--- a/Atelier 2.ipynb
+++ b/Atelier 2.ipynb
@@ -171,10 +171,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           *\n",
+      "          * *\n",
+      "         * * *\n",
+      "        * * * *\n",
+      "       * * * * *\n",
+      "      * * * * * *\n",
+      "     * * * * * * *\n",
+      "    * * * * * * * *\n",
+      "   * * * * * * * * *\n",
+      "  * * * * * * * * * *\n",
+      " * * * * * * * * * * *\n"
+     ]
+    }
+   ],
+   "source": [
+    "for (int i=1; i<=réponse; i++)\n",
+    "{\n",
+    "    for (int j=1; j<=réponse-i; j++)\n",
+    "    {\n",
+    "        System.out.print(\" \");\n",
+    "    }\n",
+    "    for (int j=1; j<=i; j++)\n",
+    "    {\n",
+    "        System.out.print(\" *\");\n",
+    "    }\n",
+    "    System.out.println();\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
